RESOLVED FIXED160534
Leaks bot hits an assertion in ResourceUsageThread::platformThreadBody
https://bugs.webkit.org/show_bug.cgi?id=160534
Summary Leaks bot hits an assertion in ResourceUsageThread::platformThreadBody
Alexey Proskuryakov
Reported 2016-08-03 16:56:43 PDT
The test asserts almost every time. https://build.webkit.org/results/Apple%20Yosemite%20(Leaks)/r204078%20(7088)/inspector/memory/tracking-crash-log.txt Thread 27 Crashed:: WebCore: ResourceUsage 0 com.apple.JavaScriptCore 0x000000010a50ae97 WTFCrash + 39 1 com.apple.WebCore 0x00000001113ed565 WebCore::ResourceUsageThread::platformThreadBody(JSC::VM*, WebCore::ResourceUsageData&) + 1221 2 com.apple.WebCore 0x00000001113e7695 WebCore::ResourceUsageThread::threadBody() + 101 3 com.apple.WebCore 0x00000001113e7625 WebCore::ResourceUsageThread::threadCallback(void*) + 21 4 com.apple.JavaScriptCore 0x000000010a57dc49 WTF::createThread(void (*)(void*), void*, char const*)::$_0::operator()() const + 25 5 com.apple.JavaScriptCore 0x000000010a57dc1d void std::__1::__invoke_void_return_wrapper<void>::__call<WTF::createThread(void (*)(void*), void*, char const*)::$_0&>(WTF::createThread(void (*)(void*), void*, char const*)::$_0&&&) + 45 This has been going for a while (at least since July 15, which is the oldest stored history).
Attachments
Patch (5.41 KB, patch)
2016-08-24 11:32 PDT, Andreas Kling
no flags
Alexey Proskuryakov
Comment 1 2016-08-03 16:57:08 PDT
Perhaps because of this? // FIXME: Handle running with bmalloc disabled.
Radar WebKit Bug Importer
Comment 2 2016-08-03 16:57:22 PDT
Andreas Kling
Comment 3 2016-08-24 11:32:11 PDT
Joseph Pecoraro
Comment 4 2016-08-24 11:59:20 PDT
Comment on attachment 286873 [details] Patch r=me
WebKit Commit Bot
Comment 5 2016-08-24 12:25:35 PDT
Comment on attachment 286873 [details] Patch Clearing flags on attachment: 286873 Committed r204917: <http://trac.webkit.org/changeset/204917>
WebKit Commit Bot
Comment 6 2016-08-24 12:25:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.