Source/bmalloc: Add bmalloc::api::isEnabled(). <https://webkit.org/b/160534>

Reviewed by Joseph Pecoraro.

* bmalloc/bmalloc.h:
(bmalloc::api::isEnabled):

Source/WebCore:
Leaks bot hits an assertion in ResourceUsageThread::platformThreadBody
<https://webkit.org/b/160534>

Reviewed by Joseph Pecoraro.

Use the correct malloc bucket when bmalloc is disabled (which is the case on leaks bots.)

* page/cocoa/ResourceUsageThreadCocoa.mm:
(WebCore::ResourceUsageThread::platformThreadBody):

Source/WTF:
Add WTF::isFastMallocEnabled().
<https://webkit.org/b/160534>

Reviewed by Joseph Pecoraro.

* wtf/FastMalloc.cpp:
(WTF::isFastMallocEnabled):
* wtf/FastMalloc.h:


Canonical link: https://commits.webkit.org/179302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204917 268f45cc-cd09-0410-ab3c-d52691b4dbfc